changed to my name

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                 </div>
                 <span class="home-mobile-text12">
                   <span class="home-mobile-text13">I’m</span>
-                  <span class="home-mobile-text14">Toji</span>
-                  <span>Fushiguro</span>
+                  <span class="home-mobile-text14">Emily</span>
+                  <span>Chau</span>
                 </span>
               </div>
               <span class="home-mobile-text16">
                 <span class="home-mobile-text17">a</span>
-                <span class="home-mobile-text18">front-end developer</span>
+                <span class="home-mobile-text18">a UX Design student</span>
                 <span>
                   <span>who loves intuitive,</span>
                   <br />
