remove extra letter a

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </div>
               <span class="home-mobile-text16">
                 <span class="home-mobile-text17">a</span>
-                <span class="home-mobile-text18">a UX Design student</span>
+                <span class="home-mobile-text18"> UX Design student</span>
                 <span>
                   <span>who loves intuitive,</span>
                   <br />
